<resources>
    <string name="app_name">News Application</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="welcome">WELCOME</string>
    <string name="Login_message">Login to Continue</string>
    <string name="Phone_hint">Phone no.</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_third_acttivity">thirdActtivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>